<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="36dp"
        android:paddingRight="36dp">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/account"
            style="@style/Login.Input.Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/user_icon"
            android:layout_alignTop="@id/user_icon"
            android:layout_toRightOf="@id/user_icon"
            android:background="@null"
            android:hint="@string/account_hint"
            android:maxLines="1"
            android:text="account" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@+id/user_icon"
            android:layout_alignRight="@+id/account"
            android:layout_below="@+id/user_icon"
            android:layout_marginTop="8dp"
            android:background="@color/lightViolet"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" />

        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/user_icon"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/password"
            style="@style/Login.Input.Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/password_icon"
            android:layout_alignTop="@id/password_icon"
            android:layout_below="@+id/view"
            android:layout_toRightOf="@id/password_icon"
            android:background="@null"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:text="password" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@+id/password_icon"
            android:layout_alignRight="@+id/password"
            android:layout_below="@+id/password_icon"
            android:layout_marginTop="8dp"
            android:background="@color/lightViolet"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_below="@+id/password_icon"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_rect_login_selector"
            android:text="@string/login"
            android:textColor="@color/indicator_item_text_color_selector"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/logon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password_icon"
            android:layout_below="@+id/login"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/logon"
            android:textColor="@color/darkRed" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/login"
            android:layout_below="@+id/login"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/forget_password"
            android:textColor="@color/darkRed" />
    </RelativeLayout>

</RelativeLayout>